--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="css\estilos.css">
+  <!-- <link rel="stylesheet" href="css\reset.css"> -->
+
+  <title>Diogoaib no GitHub</title>
+</head>
+
+<body>
+
+  <h1>Diogoaib no GitHub</h1>
+
+  <h2>Abrir o repositório completo: <a href="https://github.com/Diogoaib?tab=repositories">
+      Diogoaib </a>
+  </h2>
+
+  <h3>Abrir o projeto <a href="https://diogoaib.github.io/passo4/exemplo1/index.html">
+      Primeiro cabeçalho em HTML </a>
+  </h3>
+
+  <h3>Abrir o projeto <a href="https://diogoaib.github.io/passo4/exemplo2/index.html">
+      Cabeçalhos </a>
+  </h3>
+
+  <h3>Abrir o projeto <a href="https://diogoaib.github.io/passo4/exemplo3/index.html">
+      Parágrafos</a>
+  </h3>
+
+  <h3>Abrir o projeto <a href="https://diogoaib.github.io/passo4/playlist/index.html">
+      Playlists spotify </a>
+  </h3>
+  
+  <h3>Abrir o projeto <a href="https://0xsupy.github.io/passo4/1.html">
+      Foto que uso no discord </a>
+  </h3>
+
+  <h3>Abrir o projeto <a href="https://0xsupy.github.io/Tabela-HTML-122/">
+      Tabela caricaturas 12º2 </a>
+  </h3>
+  
+  
+  
+  <p>
+  <p id="tipo1"> :) </p>
+  <p>
+
+  <!-- <img src="imagens/img1.jpg" alt="" width="100">
+  //-->
+
+</body>
+
+</html>
