--- a/index.html
+++ b/index.html
@@ -35,11 +35,7 @@
       Playlists spotify </a>
   </h3>
   
-  <h3>Abrir o projeto <a href="https://0xsupy.github.io/passo4/1.html">
-      Foto que uso no discord </a>
-  </h3>
-
-  <h3>Abrir o projeto <a href="https://0xsupy.github.io/Tabela-HTML-122/">
+  <h3>Abrir o projeto <a href="https://diogoaib.github.io/passo5/index.html">
       Tabela caricaturas 12º2 </a>
   </h3>
   
